# product-selector

./: .env.example  .gitignore  1_Run Tests.txt  CLAUDE.md  Quickstart  README.md  cli.py  gearbox-catalog-frontend.html  gearbox_client_example.py  package-lock.json  pyproject.toml
.cursor/rules/: best-practice.mdc  guidance.mdc
.github/workflows/: deploy.yml
Run Tests/: 10_Upload coverage reports (if available).txt  1_Set up job.txt  20_Post Checkout code.txt  21_Complete job.txt  2_Checkout code.txt  3_Set up Python.txt  4_Install uv.txt  5_Set up AWS SAM CLI.txt  6_Change to lambda directory and setup.txt  7_Run unit tests.txt  8_Start local API and run integration tests.txt  9_Upload test results.txt
docs/: Caddyfile  README.md  index.html  step1-connection.html  step2-querying.html  step3-filtering.html  step4-advanced.html
docs/css/: common.css  filters.css  main.css  steps.css
docs/js/: common.js  display.js  filters.js  main.js  step1.js  step2.js  step3.js  step4.js
docs/media/: README.md
lambda/: samconfig.toml  template.yaml
lambda/.aws-sam/: build.toml
lambda/app/: .env.example  __main__.py  app.py  requirements.txt  utils.py
lambda/app/models/: __init__.py
lambda/tests/: __init__.py
lambda/tests/integration/: __init__.py  test_deployed_lambda.py  test_local_api.py
lambda/tests/unit/: __init__.py  test_lambda_handler.py
tests/: conftest.py  fixtures.py  test_cli.py
tests/integration/: _test_security.py  test_api_gateway.py
tests/unit/: no_test_error_handling.py  test_handler.py
